Move navigation to a more central spot

--- a/styles.css
+++ b/styles.css
@@ -155,7 +155,7 @@ footer {
 }
 
 /* Certificate details styles */
-.certificate-details {
+#certificate-details {
   display: none;
   width: 100%;
   margin-top: 2rem;
